# 4chess-fortress

./: 4chess.py  README.md  chess.py  pyproject.toml  test_all.py
src/chess4_fortress/: chess4.py  utils.py
